force-app/main/default/objects/Notification__c/fields/Drinks_Dispatch_View_Id__c.field-meta.xml
<CustomField>
    <fullName>Drinks_Dispatch_View_Id__c</fullName>
    <label>Drinks Dispatch View Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>