force-app/main/default/objects/Notification__c/fields/Machine_Location__c.field-meta.xml
<CustomField>
    <fullName>Machine_Location__c</fullName>
    <label>Machine Location</label>
    <length>240</length>
    <type>Text</type>
</CustomField>