force-app/main/default/objects/Notification__c/fields/Universal_Player_ID__c.field-meta.xml
<CustomField>
    <fullName>Universal_Player_ID__c</fullName>
    <label>Universal Player ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>